# meso-archive

./: CMakeLists.txt  README.md  build.py  build_api.py  clear.py  main.cpp  main.h  pack.py
files/demo/: config.txt  demo.neu
scripts/: dll_parse.py  dvs_make.py  meso.py
scripts/pyapi/: __init__.py  cpp_types.py  meso.py
src/API/: CMakeLists.txt  Core_api.cpp  Solver_api.cpp
src/Core/: CMakeLists.txt  Core.cpp  PPrinter.cpp  Reader.cpp
src/Mesh/: CMakeLists.txt  MeshBuild.cpp  MeshGeom.cpp  MeshObject.cpp  MeshReader.cpp
src/Solver/: CMakeLists.txt  Numerical.cpp  Solver.cpp
src/Solver/dugks/: dugks_aoki.cpp  dugks_incompressible.cpp  dugks_shakhov.cpp  wbdugks_pf.cpp  wbdugks_shakhov.cpp
src/Solver/numerical/: gauss_integral.cpp
src/include/: API.h  Core.h  Mesh.h  Solver.h
src/include/solver/: dugks_aoki.h  dugks_incompressible.h  dugks_shakhov.h  wbdugks_phase_field.h  wbdugks_shakhov.h
src/include/tpps/: solver.tpp
src/include/utils/: Numerical.h
